Make sure logos fit into a single line on mobile

--- a/sites/ghdi/assets/scss/additional.scss
+++ b/sites/ghdi/assets/scss/additional.scss
@@ -3,6 +3,14 @@
  * ghdi specific styles
  */
 
+/* Small devices (landscape phones, 576px and up) */
+/* see https://github.com/twbs/bootstrap/issues/21943#issuecomment-830584567 */
+@media (min-width: 576px) {
+    .w-sm-25 {
+        width: 25%!important;
+    }
+}
+
 body {
     a {
         text-decoration: none;
@@ -186,6 +194,39 @@ footer {
     li a {
         text-decoration: none;
         font-weight: bold;
+    }
+
+    .row.terms {
+        border-top: 1px solid white;
+    }
+
+    #logo-footer-ghi {
+        height: 40px;
+        width: auto;
+    }
+
+    #logo-footer-dfg {
+        margin-left: 32px;
+        margin-top: 25px;
+        height: 30px;
+        width: auto;
+    }
+
+    #logo-footer-zeit-stiftung {
+        margin-left: 28px;
+        margin-bottom: -20px;
+        height: 35px;
+        width: auto;
+    }
+
+    @media (max-width: $screen-xs-max) {
+        #logo-footer-dfg {
+            margin-left: 4px;
+        }
+
+        #logo-footer-zeit-stiftung {
+            margin-left: 2px;
+        }
     }
 }
 
