--- a/sites/ghdi/assets/scss/print-additional.scss
+++ b/sites/ghdi/assets/scss/print-additional.scss
@@ -37,7 +37,7 @@ article {
         display: none;
     }
 
-    h3.dta-head{
+    h3.dta-head, h4.dta-head {
         font-size: 14px;
     }
 }
